--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,12 @@
     "@types/react-dom": "18.2.18",
     "@types/react-syntax-highlighter": "15.5.11",
     "autoprefixer": "10.4.16",
-    "axios": "1.6.2",
+    "axios": "^1.12.2",
     "clsx": "2.0.0",
     "date-fns": "2.30.0",
     "framer-motion": "10.16.16",
     "lucide-react": "0.294.0",
-    "next": "14.0.4",
+    "next": "^14.2.33",
     "postcss": "8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,7 +32,7 @@
     "react-hot-toast": "2.4.1",
     "react-markdown": "9.0.1",
     "react-query": "3.39.3",
-    "react-syntax-highlighter": "15.5.0",
+    "react-syntax-highlighter": "^16.0.0",
     "recharts": "2.8.0",
     "remark-gfm": "4.0.0",
     "tailwindcss": "3.3.6",
